# meshcore-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  release.sh
src/: client.rs  error.rs  lib.rs
src/commands/: mod.rs
src/event/: mod.rs
src/protocol/: command.rs  frame.rs  mod.rs  packet.rs  parser.rs
src/transport/: mod.rs  serial.rs
src/types/: contact.rs  device.rs  message.rs  mod.rs  stats.rs  telemetry.rs
